# UW-Projects

./: .gitattributes  README.md
Year1/Introduction to Programming/: README.md
Year3/Rust Programming Course/scylladb-drivers-benchmarker/: Cargo.toml  LICENSE  README.md
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/: command.rs  flame_graph.rs  lib.rs  main.rs  measurement.rs  perf_stat.rs  repo_with_commits.rs  utilities.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/benchmarking/: mod.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/commit_hash/: errors.rs  mod.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/config/: backend.rs  benchmark.rs  config_traits.rs  mod.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/database/: mod.rs  tests.rs  utilities.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/parsing/: aliasing.rs  benchmark.rs  benchmark_setup.rs  database.rs  mod.rs  plot.rs  tests.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/src/plotting/: error.rs  mod.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/tests/: benchmark_test.rs  database_test.rs  plot_test.rs
Year3/Rust Programming Course/scylladb-drivers-benchmarker/tests/cpp_vs_rust_test/: config.yml
Year3/Rust Programming Course/scylladb-drivers-benchmarker/tests/flame_graph_bench_test/: back.yml  bench.yml  main.c  makefile
Year3/Rust Programming Course/scylladb-drivers-benchmarker/tests/plot_test/: config.yml  input_flame_0  input_flame_1
(+288 files in other folders)
